@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)nii.c	1.41 (gritter) 8/6/06
+ * Sccsid @(#)nii.c	1.42 (gritter) 8/12/06
  */
 
 /*
@@ -183,3 +183,4 @@ struct charout	*charout;
 int	charoutsz;
 int	charf;
 int	fmtchar;
+int	Tflg;
